Filter Finished part2

--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -305,13 +305,11 @@
               </label>
             </div>
             <div class="pt-3">
-              <label> 
-                Reclamação:
-                  <input type="text" class="h-[180px] w-[350px]">
-              </label>
+              <label class="block pb-3"> Reclamação: </label>
+              <textarea class="h-[180px] w-full resize-none" placeholder="Digite sua reclamação aqui!"></textarea>
             </div>
           </div>
-          <div class="flex flex-row justify-center space-x-5 text-lg pt-8">
+          <div class="flex justify-center items-center space-x-5 text-lg pt-3">
             <button type="submit" class="font-bold text-color-dark-orange hover:bg-color-hover border-color-dark-orange border-solid border-2 rounded-full py-1 px-12 transition">
               Aplicar
             </button>
