--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -2,16 +2,15 @@
 <title>Área Secreta</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
-<script defer src="{% static 'core/js/secret.js' %}"></script>
 {% endblock %} {% block content %}
-<main class="framed m-8 p-7" x-data="{ confirmation: false }">
+<main class="framed m-8 p-7">
   <form
     action="{% url 'secret' %}"
     method="POST"
     class="flex flex-col gap-3"
     enctype="multipart/form-data"
     @submit="submit"
-    x-data="fields"
+    x-data="fields(true)"
   >
     <h1 class="font-sans mb-2 text-3xl font-bold">Conta administrativa</h1>
     {% csrf_token %}
@@ -52,6 +51,7 @@
               name="cpf"
               id="txt-cpf"
               class="w-full"
+              :class="cpfOk || 'border-red-500'"
               required
               x-model="cpf"
               x-mask="999.999.999-99"
@@ -64,6 +64,7 @@
               name="rg"
               id="txt-rg"
               class="w-full"
+              :class="rgOk || 'border-red-500'"
               required
               x-model="rg"
               x-mask="99.999.999-9"
@@ -124,7 +125,7 @@
           ></span>
         </div>
       </article>
-      <article x-data="address">
+      <article>
         <h2 class="font-sans mb-2 text-2xl font-bold">Contato</h2>
 
         <div class="flex gap-3">
@@ -150,71 +151,73 @@
             />
           </div>
         </div>
-        <div class="my-3 flex items-end gap-3">
-          <div class="field">
-            <label for="txt-cep">CEP</label>
-            <input
-              type="number"
-              name="cep"
-              id="txt-cep"
-              size="11"
-              required
-              x-ref="cep"
-              @keydown="validateNumber"
-            />
+        <div x-data="address">
+          <div class="my-3 flex items-end gap-3">
+            <div class="field">
+              <label for="txt-cep">CEP</label>
+              <input
+                type="number"
+                name="cep"
+                id="txt-cep"
+                size="11"
+                required
+                x-ref="cep"
+                @keydown="validateNumber"
+              />
+            </div>
+            <button class="btn block" @click.prevent="fillCEP($refs.cep.value)">
+              Completar
+            </button>
           </div>
-          <button class="btn block" @click.prevent="fillCEP($refs.cep.value)">
-            Completar
-          </button>
-        </div>
-        <div class="flex gap-3">
-          <div class="field grow">
-            <label for="txt-city">Cidade</label>
-            <input
-              type="text"
-              name="residence-city"
-              id="txt-city"
-              class="w-full"
-              x-model="city"
-              required
-            />
+          <div class="flex gap-3">
+            <div class="field grow">
+              <label for="txt-city">Cidade</label>
+              <input
+                type="text"
+                name="residence-city"
+                id="txt-city"
+                class="w-full"
+                x-model="city"
+                required
+              />
+            </div>
+            <div class="field grow">
+              <label for="txt-neighborhood">Bairro</label>
+              <input
+                type="text"
+                name="neighborhood"
+                id="txt-txt-neighborhood"
+                class="w-full"
+                x-model="neighborhood"
+                required
+              />
+            </div>
           </div>
-          <div class="field grow">
-            <label for="txt-neighborhood">Bairro</label>
-            <input
-              type="text"
-              name="neighborhood"
-              id="txt-txt-neighborhood"
-              class="w-full"
-              x-model="neighborhood"
-              required
-            />
-          </div>
-        </div>
-        <div class="flex gap-3">
-          <div class="field grow">
-            <label for="txt-street">Rua</label>
-            <input
-              type="text"
-              name="street"
-              id="txt-street"
-              class="w-full"
-              x-model="street"
-            />
-          </div>
-          <div class="field">
-            <label for="txt-street-number">Número</label>
-            <input
-              type="number"
-              name="street-number"
-              id="txt-street-number"
-              size="4"
-              required
-            />
-          </div>
-          <div class="field">
-            <label for="txt-comp">Complemento</label>
-            <input type="text" name="complement" id="txt-comp" size="8" />
+          <div class="flex gap-3">
+            <div class="field grow">
+              <label for="txt-street">Rua</label>
+              <input
+                type="text"
+                name="street"
+                id="txt-street"
+                class="w-full"
+                x-model="street"
+              />
+            </div>
+            <div class="field">
+              <label for="txt-street-number">Número</label>
+              <input
+                type="number"
+                name="street-number"
+                id="txt-street-number"
+                size="4"
+                required
+              />
+            </div>
+            <div class="field">
+              <label for="txt-comp">Complemento</label>
+              <input type="text" name="complement" id="txt-comp" size="8" />
+            </div>
           </div>
         </div>
         <div class="flex gap-2">
@@ -222,7 +225,7 @@
             for="file-picture"
             class="btn flex w-max cursor-pointer items-center gap-1"
           >
-            <span>Foto de perfil</span>
+            <span x-text="imageName ?? 'Foto de perfil'"></span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -245,92 +248,96 @@
             accept="image/*"
             required
             hidden
+            @input="imageName = $el.files[0].name"
           />
-          <button class="btn" @click.prevent="confirmation = true">
+          <button
+            class="btn"
+            @click.prevent="Array.from(new FormData($root)).some(i => i[1] == '' && !['password', 'key', 'complement'].includes(i[0])) || switchTab()"
+          >
             Continuar
           </button>
         </div>
       </article>
-      <dialog
-        :open="confirmation"
-        class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg"
-        @keydown.escape.window="confirmation = false"
-      >
-        <div x-data="dialog">
-          <div class="field">
-            <label for="txt-password">Senha</label>
-            <input
-              type="password"
-              name="password"
-              id="txt-password"
-              x-model="password"
-              required
-            />
-          </div>
-          <div class="field mt-3">
-            <label for="txt-duplicate">Confirme a senha</label>
-            <input
-              type="password"
-              id="txt-duplicate"
-              x-model="duplicate"
-              required
-            />
-          </div>
-          <ul class="my-2">
-            <template x-for="check in checks">
-              <li
-                class="flex gap-2"
-                :class="check.test(password, duplicate) ? 'text-lime-500' : 'text-red-500'"
-              >
-                <template x-if="check.test(password, duplicate)">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="h-6 w-6"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                    />
-                  </svg>
-                </template>
-                <template x-if="!check.test(password, duplicate)">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="h-6 w-6"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-                    />
-                  </svg>
-                </template>
-                <span x-text="check.description"></span>
-              </li>
-            </template>
-          </ul>
-          <div class="field">
-            <label for="txt-key">Chave de segurança</label>
-            <input type="password" name="key" id="txt-key" required />
-          </div>
-          <div class="mt-3 flex gap-3">
-            <button class="btn" type="submit">Confirmar</button>
-            <button class="btn" @click.prevent="confirmation = false">
-              Voltar
-            </button>
-          </div>
-        </div>
-      </dialog>
     </section>
+    <dialog
+      :open="confirmation"
+      class="rounded-xl border border-slate-400 px-8 py-5 shadow-lg"
+      @keydown.escape.window="confirmation = false"
+    >
+      <div>
+        <div class="field">
+          <label for="txt-password">Senha</label>
+          <input
+            type="password"
+            name="password"
+            id="txt-password"
+            x-model="password"
+            required
+          />
+        </div>
+        <div class="field mt-3">
+          <label for="txt-duplicate">Confirme a senha</label>
+          <input
+            type="password"
+            id="txt-duplicate"
+            x-model="duplicate"
+            required
+          />
+        </div>
+        <ul class="my-2">
+          <template x-for="check in checks">
+            <li
+              class="flex gap-2"
+              :class="check.test(password, duplicate) ? 'text-lime-500' : 'text-red-500'"
+            >
+              <template x-if="check.test(password, duplicate)">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+              </template>
+              <template x-if="!check.test(password, duplicate)">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+              </template>
+              <span x-text="check.description"></span>
+            </li>
+          </template>
+        </ul>
+        <div class="field">
+          <label for="txt-key">Chave de segurança</label>
+          <input type="password" name="key" id="txt-key" required />
+        </div>
+        <div class="mt-3 flex gap-3">
+          <button class="btn" type="submit">Confirmar</button>
+          <button class="btn" @click.prevent="confirmation = false">
+            Voltar
+          </button>
+        </div>
+      </div>
+    </dialog>
   </form>
 </main>
 {% endblock %}
