Added validation for email field

--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -300,6 +300,7 @@
               id="txt-email"
               class="w-full"
               required
+              @keydown="validateEmail"
             />
           </div>
           <div class="field">
