--- a/core/templates/core/chamadaprofessores.html
+++ b/core/templates/core/chamadaprofessores.html
@@ -53,6 +53,16 @@
           id="dataAtual"
         />
       </div>
+      <div class="my-2 w-full md:mx-3">
+        <span class="my-2 flex justify-center text-xl text-color-primary"
+          >Quantidade</span
+        >
+        <input
+        type="number"
+        class="w-full rounded-full text-center"
+        id="QuantAulas"/>
+        
+      </div>
     </div>
   </div>
   <h1
@@ -200,166 +210,22 @@
           />
         </svg>
       </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
     </div>
   </div>
   <div class="flex justify-center">
     <div
-      class="mt-10 block h-[420px] w-full rounded-2xl bg-white px-6 py-2 md:h-[400px]"
+      class="mt-10 block h-[380px] w-full rounded-2xl bg-white px-6 py-2 md:h-[380px]"
     >
       <h1
         class="mb-2 mt-2 text-center text-[40px] font-bold text-color-secondary md:text-left"
       >
         Diário
       </h1>
-      <div class="mb-3 flex items-center">
-        <span class="justify-left mx-2 my-2 text-xl text-color-primary"
-          >Quantidade de aulas</span
-        >
-        <input type="number" class="h-8 w-[60px] rounded-full text-center" />
-      </div>
       <div class="field flex-grow">
         <textarea
           id="conteudo"
           name="reclamacao"
-          class="h-56 w-full rounded border border-gray-300 px-4 py-2"
+          class="h-64 w-full rounded border border-gray-300 px-4 py-2"
           placeholder="Digite o conteúdo da aula aqui"
         ></textarea>
       </div>
