--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -6,111 +6,53 @@
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-20 px-5">
   <h1
-    class="mb-10 ml-10 mt-12 text-left text-[40px] font-bold text-color-primary"
+    class="mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
   >
-    Turmas
+    Turma
   </h1>
-  <div class="flex justify-center">
-    <div class="h-[90px] w-[90%]">
-      <div class="swiper mySwiper carousel3">
-        <div class="swiper-wrapper px-12">
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="flex h-[60px] w-[200px] flex-col items-center justify-center rounded-full border border-color-secondary hover:bg-color-secondary-dimm"
-            >
-              <span class="text-[24px] font-bold text-color-secondary"
-                >1º GT</span
-              >
-            </div>
-          </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+
+  <div class="flex w-[100%] justify-center">
+    <div
+      class="mt-2 flex w-full flex-col items-center justify-center md:flex-row"
+    >
+      <div class="my-2 w-full md:mx-3">
+        <span class="my-2 flex justify-center text-xl text-color-primary"
+          >Sala</span
+        >
+        <select name="Sala" class="w-full rounded-full text-center">
+          <option>1ºGT</option>
+          <option>2ºHT</option>
+        </select>
       </div>
-    </div>
-  </div>
-  <div class="flex justify-center">
-    <div class="mt-3 flex h-[90px] w-[85%] items-center justify-center">
-      <div class="mx-10">
-        <span class="text-xl text-color-primary">Turma: </span>
-        <select name="Turma" class="rounded-full px-16">
+      <div class="my-2 w-full md:mx-3">
+        <span class="my-2 flex justify-center text-xl text-color-primary"
+          >Turma</span
+        >
+        <select name="Turma" class="w-full rounded-full text-center">
+          <option>Todas</option>
           <option>A</option>
           <option>B</option>
         </select>
       </div>
-      <div class="mx-10">
-        <span class="text-xl text-color-primary">Aula: </span>
-        <select name="Aula" class="rounded-full px-16">
+      <div class="my-2 w-full md:mx-3">
+        <span class="my-2 flex justify-center text-xl text-color-primary"
+          >Aula</span
+        >
+        <select name="Aula" class="w-full rounded-full text-center">
           <option>PW1</option>
-          <option>PW2</option>
+          <option>TPA</option>
+          <option>GEO</option>
         </select>
       </div>
-      <div class="mx-10">
-        <span class="text-xl text-color-primary">Data: </span>
-        <input type="date" class="rounded-full" />
+      <div class="my-2 w-full md:mx-3">
+        <span class="my-2 flex justify-center text-xl text-color-primary"
+          >Data</span
+        >
+        <input
+          type="date"
+          class="w-full rounded-full text-center"
+          id="dataAtual"
+        />
       </div>
     </div>
   </div>
