--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -1,6 +1,7 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 <title>Boletim</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/boletim.css' %}" />
+<script defer src="{% static 'core/js/filter.js' %}"></script>
 {% endblock %} {% block content %}
 <main class="px-8 pb-10">
   <h1 class="text-3xl ml-12 my-8 font-semibold text-color-txt-perfil">Boletim</h1>
