Semi created see comunicate

--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -233,7 +233,7 @@
         :class="open ? 'text-xl' : 'text-3xl'"
         >Reconsideração de Notas (Aberto até 00/00/0000)</label
       >
-      <button id="openModalButton">
+      <button id="openModalButton"> <!-- OPEN RECONSIDERAÇÃO -->
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -251,12 +251,12 @@
       </button>
     </div>
     <form>
-      <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center">
+      <div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-25 justify-center items-center"> <!-- SCREEN RECONSIDERAÇÃO -->
         <div class="w-[600px] h-[600px] bg-color-grey rounded-3xl text-color-txt-perfil">
           <div class="text-3xl font-bold mt-8 mx-10 flex flex-row justify-between">
             <div> Reconsideração de Nota </div>
             <div>
-              <button id="closeModalButton" class="text-3xl font-bold text-color-txt-perfil">
+              <button id="closeModalButton" class="text-3xl font-bold text-color-txt-perfil"> <!-- CLOSE RECONSIDERAÇÃO -->
                 <svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 fill="none" 
