--- a/core/templates/core/chamadaprofessores.html
+++ b/core/templates/core/chamadaprofessores.html
@@ -57,7 +57,7 @@
         <span class="my-2 flex justify-center text-xl text-color-primary"
           >Quantidade</span
         >
-        <select id="quantidade" class="w-full rounded-full text-center">
+        <select id="quantidadeAulas" class="w-full rounded-full text-center">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -66,193 +66,53 @@
     </div>
   </div>
   <h1
-    class="mb-6 mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
+    class="mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
   >
     Chamada
   </h1>
-  <div class="flex w-full justify-center">
-    <div class="mt-2 grid w-full grid-cols-1 gap-4">
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
-      <label
-        class="flex w-full cursor-pointer items-center justify-between space-x-2 rounded-full border bg-white px-4 py-2 transition-colors duration-300"
-      >
-        <input
-          type="checkbox"
-          class="form-checkbox h-6 w-6 rounded-full text-red-500 focus:ring focus:ring-red-300"
-        />
-        <span class="flex-1 text-center">Giovanni de Pita Cicero</span>
-        <svg
-          class="h-6 w-6 text-gray-500"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
-          />
-        </svg>
-      </label>
+  <div class="flex flex-col md:flex-row">
+  <div class="md:w-1/2">
+    <div class="container mx-auto mt-6">
+      <table class="w-full border bg-white shadow-md rounded-none">
+        <thead class="bg-color-secondary">
+          <tr>
+            <!-- Conteúdo do cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Conteúdo do corpo da tabela -->
+        </tbody>
+      </table>
     </div>
-  </div>
-  <div class="flex justify-center">
-    <div
-      class="mt-10 block h-[380px] w-full rounded-2xl bg-white px-6 py-2 md:h-[380px]"
-    >
-      <h1
-        class="mb-2 mt-2 text-center text-[40px] font-bold text-color-secondary md:text-left"
-      >
-        Diário
-      </h1>
-      <div class="field flex-grow">
-        <textarea
-          id="conteudo"
-          name="reclamacao"
-          class="h-64 w-full rounded border border-gray-300 px-4 py-2"
-          placeholder="Digite o conteúdo da aula aqui"
-        ></textarea>
-      </div>
-    </div>
-  </div>
-  <div class="mt-10 flex w-full flex-col gap-3 md:block md:gap-2">
-    <input
-      type="submit"
-      value="Enviar"
-      class="text-bold rounded-full border border-color-secondary bg-color-secondary-dimm px-12 py-4 text-[21px] font-bold text-color-secondary md:mx-auto md:mt-3 md:block"
-    />
   </div>
   
-  <div class="overflow-x-auto">
-    <table class="min-w-full bg-white">
-      <thead>
-        <tr class="bg-gray-200">
-          <th class="py-2 px-4 text-left">Nome</th>
-          <th id="checkbox-header" class="py-2 px-4 text-left">Checkbox 1</th>
-        </tr>
-      </thead>
-      <tbody id="table-body">
-        <tr class="border-b border-gray-300">
-          <td class="py-2 px-4">Item 1</td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="md:w-1/2 md:pl-10">
+    <div class="flex justify-center md:justify-start w-full mt-5">
+      <div class="block w-full h-[380px] rounded-2xl bg-white px-6 py-2 md:h-[380px]">
+        <h1 class="mb-2 mt-2 text-center md:text-left text-[40px] font-bold text-color-secondary">
+          Diário
+        </h1>
+        <div class="field flex-grow">
+          <textarea
+            id="conteudo"
+            name="reclamacao"
+            class="h-64 w-full rounded border border-gray-300 px-4 py-2"
+            placeholder="Digite o conteúdo da aula aqui"
+          ></textarea>
+        </div>
+      </div>
+    </div>
+    
+    <div class="mt-10">
+      <input
+        type="submit"
+        value="Enviar"
+        class="text-bold rounded-full border border-color-secondary bg-color-secondary-dimm px-12 py-4 text-[21px] font-bold text-color-secondary md:mx-auto md:mt-3 block w-full"
+      />
+    </div>
   </div>
+</div>
+
+  
 </main>
 {% endblock %}
