--- a/core/templates/core/turmaprofessores.html
+++ b/core/templates/core/turmaprofessores.html
@@ -2,6 +2,7 @@
 
 <!--Não está finalizado-->
 <script defer src="{% static 'core/js/turmaprofessores.js' %}"></script>
+<link rel="stylesheet" href="{% static 'core/css/turmaprofessores.css' %}" />
 
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-20 px-5">
@@ -56,44 +57,42 @@
       </div>
     </div>
   </div>
-  <div class="flex h-[60px] w-[540px] justify-center">
-    <nav class="justify-center">
+
+  <div class=" mt-6" x-data="{ selected: 'option-1' }">
+    <nav class="">
       <ul class="flex justify-center">
-        <li
-          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
-          onclick="selectButton(2)"
-        >
-          Nota
-        </li>
-        <li
-          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
-          onclick="selectButton(3)"
-        >
-          Prova | Atividade
-        </li>
-        <li
-          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
-          onclick="selectButton(4)"
-        >
-          Reposições
-        </li>
-        <li
-          class="nav-item cursor-pointer px-6 py-4 hover:bg-neutral-400"
-          onclick="selectButton(5)"
-        >
-          Plano de Ensino
-        </li>
+          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-1' }">
+              <a href="#option-1" @click="selected = 'option-1'" class="text-color-primary">Nota</a>
+          </li>
+          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-2' }">
+              <a href="#option-2" @click="selected = 'option-2'" class="text-color-primary">Prova | Atividade</a>
+          </li>
+          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-3' }">
+              <a href="#option-3" @click="selected = 'option-3'" class="text-color-primary">Reposições</a>
+          </li>
+          <li class="px-4 py-2" :class="{ 'border-b-2 border-color-primary': selected === 'option-4' }">
+              <a href="#option-4" @click="selected = 'option-4'" class="text-color-primary">Plano de Ensino</a>
+          </li>
       </ul>
-      <div id="indicator" class="h-1 w-full bg-blue-200"></div>
-    </nav>
+  </nav>
+  
+
+    <div x-show.transition.in.opacity.duration.750ms="selected === 'option-1'" class="p-4">
+      Notas
+    </div>
+
+    <div x-show.transition.in.opacity.duration.750ms="selected === 'option-2'" class="p-4">
+      Prova
+    </div>
+
+    <div x-show.transition.in.opacity.duration.750ms="selected === 'option-3'" class="p-4">
+      Reposições
+    </div>
+
+    <div x-show.transition.in.opacity.duration.750ms="selected === 'option-4'" class="p-4">
+      Plano de Ensino
+    </div>
   </div>
 
-  <div class="container mx-auto mt-8">
-    <div id="content-1" class="hidden">Conteúdo do Botão 1</div>
-    <div id="content-2" class="hidden">Conteúdo do Botão 2</div>
-    <div id="content-3" class="hidden">Conteúdo do Botão 3</div>
-    <div id="content-4" class="hidden">Conteúdo do Botão 4</div>
-    <div id="content-5" class="hidden">Conteúdo do Botão 5</div>
-  </div>
 </main>
 {% endblock %}
