Updated models and added .env file

--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -124,6 +124,21 @@
             x-text="check ? '(Sim)' : '(Não)'"
           ></span>
         </div>
+        <div class="mt-4 flex items-center gap-1" x-data="{ check: false }">
+          <label for="cb-indigenous">Indígena:</label>
+          <input
+            type="checkbox"
+            name="indigenous"
+            id="cb-indigenous"
+            x-model="check"
+            aria-describedby="ch-indigenous-desc"
+          />
+          <span
+            id="ch-indigenous-desc"
+            class="ml-1"
+            x-text="check ? '(Sim)' : '(Não)'"
+          ></span>
+        </div>
       </article>
       <article>
         <h2 class="font-sans mb-2 text-2xl font-bold">Contato</h2>
@@ -163,7 +178,7 @@
                 size="11"
                 required
                 x-ref="cep"
-                @keydown="validateNumber"
+                x-mask="99999999"
               />
             </div>
             <button class="btn block" @click.prevent="fillCEP($refs.cep.value)">
