Updated forms to match DB

--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -190,7 +190,7 @@
               <label for="txt-city">Cidade</label>
               <input
                 type="text"
-                name="residence-city"
+                name="city"
                 id="txt-city"
                 class="w-full"
                 x-model="city"
